--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -17,22 +17,23 @@
     "cy:open": "cypress open"
   },
   "dependencies": {
-    "@percy/agent": "^0.28.4",
-    "@testing-library/jest-dom": "^5.11.5",
-    "babel-jest": "^26.6.2",
-    "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.89",
-    "gatsby-plugin-manifest": "^2.5.1",
-    "gatsby-plugin-netlify": "^2.4.0",
+    "@percy/agent": "^0.28.5",
+    "@testing-library/jest-dom": "^5.11.6",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-styled-components": "^1.12.0",
+    "gatsby": "^2.28.0",
+    "gatsby-plugin-manifest": "^2.8.0",
+    "gatsby-plugin-netlify": "^2.7.0",
     "gatsby-plugin-percy": "^0.1.4",
-    "gatsby-plugin-postcss": "^3.0.4",
+    "gatsby-plugin-postcss": "^3.3.0",
     "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-react-helmet": "^3.6.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.3",
-    "gatsby-plugin-sitemap": "^2.5.0",
-    "gatsby-plugin-styled-components": "^3.3.14",
-    "gatsby-source-graphql": "^2.7.6",
+    "gatsby-plugin-sitemap": "^2.8.0",
+    "gatsby-plugin-styled-components": "^3.6.0",
+    "gatsby-source-graphql": "^2.10.0",
+    "postcss": "^8.1.10",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-animated-burgers": "^1.2.8",
@@ -41,31 +42,31 @@
     "react-pdf": "5.0.0",
     "react-reveal-effects": "^1.0.7",
     "styled-components": "^5.2.1",
-    "tailwindcss": "^1.9.6"
+    "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^7.0.1",
-    "@testing-library/dom": "^7.26.3",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/cypress": "^7.0.2",
+    "@testing-library/dom": "^7.28.1",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.3.0",
     "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^0.5.15",
-    "cypress": "^5.5.0",
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb": "^18.2.0",
+    "babel-preset-gatsby": "^0.8.0",
+    "cypress": "^6.0.1",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gatsby-cypress": "^0.4.12",
+    "gatsby-cypress": "^0.7.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.2",
+    "jest": "^26.6.3",
     "netlify-plugin-cypress": "^1.4.1",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.1",
-    "start-server-and-test": "^1.11.5"
+    "start-server-and-test": "^1.11.6"
   },
   "repository": {
     "type": "git",
