--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-plugin-sitemap": "^2.8.0",
     "gatsby-plugin-styled-components": "^3.6.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-graphql": "^2.10.0",
+    "gsap": "^3.5.1",
     "postcss": "^8.1.14",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
