--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "0.9.8",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -13,61 +13,61 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test:cypress": "cypress run",
-    "test": "jest --clearCache",
+    "test": "jest",
     "cy:open": "cypress open"
   },
   "dependencies": {
-    "@percy/agent": "^0.28.5",
-    "@testing-library/jest-dom": "^5.11.6",
+    "@percy/agent": "^0.28.6",
+    "@testing-library/jest-dom": "^5.11.8",
     "babel-jest": "^26.6.3",
     "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^2.28.0",
-    "gatsby-plugin-manifest": "^2.8.0",
-    "gatsby-plugin-netlify": "^2.7.0",
+    "gatsby": "^2.30.1",
+    "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-netlify": "^2.9.0",
     "gatsby-plugin-percy": "^0.1.4",
-    "gatsby-plugin-postcss": "^3.3.0",
+    "gatsby-plugin-postcss": "^3.5.0",
     "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.6.0",
+    "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-robots-txt": "^1.5.3",
-    "gatsby-plugin-sitemap": "^2.8.0",
-    "gatsby-plugin-styled-components": "^3.6.0",
-    "gatsby-source-graphql": "^2.10.0",
-    "postcss": "^8.1.14",
+    "gatsby-plugin-robots-txt": "^1.5.5",
+    "gatsby-plugin-sitemap": "^2.10.0",
+    "gatsby-plugin-styled-components": "^3.8.0",
+    "gatsby-source-graphql": "^2.12.0",
+    "postcss": "^8.2.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-animated-burgers": "^1.2.8",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-pdf": "5.0.0",
-    "react-reveal-effects": "^1.0.7",
+    "react-reveal-effects": "^1.0.10",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^7.0.2",
-    "@testing-library/dom": "^7.28.1",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
+    "@testing-library/cypress": "^7.0.3",
+    "@testing-library/dom": "^7.29.2",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
     "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^0.8.0",
-    "cypress": "^6.0.1",
-    "eslint": "^7.14.0",
+    "babel-preset-gatsby": "^0.10.0",
+    "cypress": "^6.2.1",
+    "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gatsby-cypress": "^0.7.0",
+    "gatsby-cypress": "^0.9.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "netlify-plugin-cypress": "^1.4.1",
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.1",
-    "start-server-and-test": "^1.11.6"
+    "start-server-and-test": "^1.11.7"
   },
   "repository": {
     "type": "git",
