--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@percy/agent": "^0.28.6",
     "@testing-library/jest-dom": "^5.11.9",
+    "@types/cypress": "^1.1.3",
     "babel-jest": "^26.6.3",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.31.1",
