--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "netlify-plugin-cypress": "^1.4.1",
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.1",
-    "start-server-and-test": "^1.12.0"
+    "start-server-and-test": "^1.12.0",
+    "stylelint": "^13.9.0",
+    "stylelint-config-standard": "^20.0.0"
   },
   "repository": {
     "type": "git",
