--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^0.12.1",
     "cypress": "^6.4.0",
-    "eslint": "^7.19.0",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-cypress": "^2.11.2",
@@ -64,6 +64,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "netlify-plugin-cypress": "^1.11.1",
+    "playwright": "^1.8.1",
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.1",
     "start-server-and-test": "^1.12.0",
