--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,20 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/todo-hooks
+    working_directory: ~/dfweb
     docker:
       - image: circleci/node:latest
     steps:
       - checkout
       - restore_cache:
-          key: yarn-packages-{{ checksum "yarn.lock" }}
+          key: yarn-packages-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
-          command: yarn
+          command: npm install
       - save_cache:
-          key: yarn-packages-{{ checksum "yarn.lock" }}
+          key: yarn-packages-{{ checksum "package-lock.json" }}
           paths:
-            - /home/circleci/.yarn
+            - /home/circleci/.npm
       - run:
           name: Run Tests
-          command: yarn test
+          command: npm run test
