--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cy:open": "cypress open"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@types/cypress": "^1.1.3",
     "babel-jest": "^26.6.3",
