--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,7 @@
 version: 2
+orbs:
+  node: circleci/node@4.1.0
+  browser-tools: circleci/browser-tools@1.1.0
 jobs:
   build:
     working_directory: ~/dfweb
@@ -6,6 +9,7 @@ jobs:
       - image: circleci/node:latest
     steps:
       - checkout
+      - browser-tools/install-browser-tools
       - restore_cache:
           key: yarn-packages-{{ checksum "package-lock.json" }}
       - run:
