--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "gatsby clean",
     "test:cypress": "cypress run",
     "test": "jest",
-    "testcafe": "start-test develop testcafex 8000",
+    "testcafe": "start-test develop http://localhost:8000 testcafex",
     "testcafex": "testcafe chrome:headless testcafe/**/*",
     "cy:open": "cypress open"
   },
