--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:cypress": "cypress run",
     "test": "jest",
     "testcafe": "start-test develop http://localhost:8000 testcafex",
-    "testcafex": "testcafe chrome:headless testcafe/**/*",
+    "testcafex": "percy exec -- testcafe chrome:headless testcafe/**/*",
     "cy:open": "cypress open"
   },
   "dependencies": {
@@ -46,9 +46,11 @@
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.3",
-    "testcafe-react-selectors": "^4.1.4"
+    "testcafe-react-selectors": "^4.1.4",
+    "testcafe": "^1.12.0"
   },
   "devDependencies": {
+    "@percy/testcafe": "^0.2.1",
     "@testing-library/cypress": "^7.0.4",
     "@testing-library/dom": "^7.29.6",
     "@testing-library/react": "^11.2.5",
@@ -72,8 +74,7 @@
     "react-test-renderer": "^17.0.1",
     "start-server-and-test": "^1.12.0",
     "stylelint": "^13.11.0",
-    "stylelint-config-standard": "^20.0.0",
-    "testcafe": "^1.12.0"
+    "stylelint-config-standard": "^20.0.0"
   },
   "repository": {
     "type": "git",
