--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "testcafe": "^1.12.0"
   },
   "devDependencies": {
+    "@percy/cli": "^1.0.0-beta.42",
     "@percy/testcafe": "^1.0.0",
     "@testing-library/cypress": "^7.0.4",
     "@testing-library/dom": "^7.30.0",
