--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -24,15 +24,14 @@
     "@types/cypress": "^1.1.3",
     "babel-jest": "^26.6.3",
     "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^3.2.0",
-    "gatsby-plugin-manifest": "^3.1.0",
-    "gatsby-plugin-netlify": "^3.1.0",
-    "gatsby-plugin-postcss": "^4.1.0",
-    "gatsby-plugin-purgecss": "^6.0.0",
-    "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby": "^3.2.1",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-netlify": "^3.2.0",
+    "gatsby-plugin-postcss": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sitemap": "^3.1.0",
+    "gatsby-plugin-sitemap": "^3.2.0",
     "gatsby-plugin-styled-components": "^4.2.0",
     "gatsby-source-graphql": "^3.2.0",
     "postcss": "^8.2.9",
@@ -45,19 +44,19 @@
     "react-reveal-effects": "^1.0.12",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.3",
-    "tailwindcss": "^2.0.4",
+    "tailwindcss": "^2.1.0",
     "testcafe-react-selectors": "^4.1.5",
     "testcafe": "^1.13.0"
   },
   "devDependencies": {
-    "@percy/cli": "^1.0.0-beta.44",
+    "@percy/cli": "1.0.0-beta.46",
     "@percy/testcafe": "^1.0.0",
     "@testing-library/cypress": "^7.0.5",
     "@testing-library/dom": "^7.30.3",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
     "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^1.1.0",
+    "babel-preset-gatsby": "^1.2.0",
     "cypress": "^6.8.0",
     "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -67,7 +66,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gatsby-cypress": "^1.1.0",
+    "gatsby-cypress": "^1.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "netlify-plugin-cypress": "^2.2.0",
