--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/cypress": "^1.1.3",
     "babel-jest": "^27.0.6",
     "babel-plugin-styled-components": "^1.13.2",
+    "canvas": "^2.8.0",
     "gatsby": "^3.10.2",
     "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-netlify": "^3.10.0",
@@ -45,8 +46,8 @@
     "react-spring": "^8.0.27",
     "styled-components": "^5.3.0",
     "tailwindcss": "^2.2.7",
-    "testcafe-react-selectors": "^4.1.5",
-    "testcafe": "^1.15.1"
+    "testcafe": "^1.15.1",
+    "testcafe-react-selectors": "^4.1.5"
   },
   "devDependencies": {
     "@percy/cli": "1.0.0-beta.62",
@@ -69,7 +70,6 @@
     "gatsby-cypress": "^1.10.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
-    
     "prettier": "^2.3.2",
     "react-test-renderer": "^17.0.2",
     "start-server-and-test": "^1.13.1",
