--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@types/cypress": "^1.1.3",
     "babel-jest": "^27.0.6",
     "babel-plugin-styled-components": "^1.13.2",
-   
     "gatsby": "^3.10.2",
     "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-netlify": "^3.10.0",
@@ -35,6 +34,7 @@
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-plugin-styled-components": "^4.10.0",
     "gatsby-source-graphql": "^3.10.0",
+    "netlify-plugin-cypress": "^2.2.0",
     "postcss": "^8.3.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
