--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/cypress": "^1.1.3",
     "babel-jest": "^27.2.4",
     "babel-plugin-styled-components": "^1.13.2",
+    "canvas": "^2.8.0",
     "gatsby": "^3.14.1",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-netlify": "^3.14.0",
