--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.17",
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby clean && gatsby build",
     "develop": "gatsby clean && gatsby develop",
     "dev": "start-test develop 8000 cy:open",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
@@ -25,6 +25,7 @@
     "babel-jest": "^27.2.4",
     "babel-plugin-styled-components": "^1.13.2",
     "canvas": "^2.8.0",
+    "extract-files": "^11.0.0",
     "gatsby": "^3.14.1",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-netlify": "^3.14.0",
