--- a/package.json
+++ b/package.json
@@ -21,21 +21,23 @@
   "dependencies": {
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.15.0",
-    "@types/cypress": "^1.1.3",    
+    "@types/cypress": "^1.1.3",
     "babel-jest": "^27.3.1",
     "babel-plugin-styled-components": "^1.13.3",
-    "canvas": "^2.8.0",
-    
-    "gatsby": "^3.14.5",
-    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby": "^4.1.4",
+    "gatsby-plugin-image": "^2.1.2",
+    "gatsby-plugin-manifest": "^4.1.3",
     "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-postcss": "^5.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-robots-txt": "^1.6.14",
-    "gatsby-plugin-sitemap": "^5.1.0",
+    "gatsby-plugin-sharp": "^4.1.3",
+    "gatsby-plugin-sitemap": "^5.1.1",
     "gatsby-plugin-styled-components": "^5.1.0",
-    "gatsby-source-graphql": "^4.1.0",    
+    "gatsby-source-filesystem": "^4.1.2",
+    "gatsby-source-graphql": "^4.1.2",
+    "gatsby-transformer-sharp": "^4.1.0",
     "netlify-plugin-cypress": "^2.2.0",
     "postcss": "^8.3.11",
     "prop-types": "^15.7.2",
@@ -43,7 +45,6 @@
     "react-animated-burgers": "^1.2.8",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-pdf": "5.5.0",
     "react-reveal-effects": "^1.0.12",
     "react-spring": "^9.3.0",
     "styled-components": "^5.3.3",
@@ -65,7 +66,7 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
