--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-source-graphql": "^4.1.3",
     "gatsby-transformer-sharp": "^4.1.0",
     "netlify-plugin-cypress": "^2.2.0",
+    "node-fetch": "^2.6.6",
     "postcss": "^8.3.11",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
