--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/cypress": "^1.1.3",
     "babel-jest": "^27.3.1",
     "babel-plugin-styled-components": "^1.13.3",
+    "dotenv": "^10.0.0",
+    "emailjs-com": "^3.2.0",
     "gatsby": "^4.1.6",
     "gatsby-plugin-image": "^2.1.3",
     "gatsby-plugin-manifest": "^4.1.4",
@@ -34,11 +36,12 @@
     "gatsby-plugin-sharp": "^4.1.4",
     "gatsby-plugin-sitemap": "^5.1.1",
     "gatsby-plugin-styled-components": "^5.1.0",
-    "gatsby-source-filesystem": "^4.1.3", 
+    "gatsby-source-filesystem": "^4.1.3",
     "gatsby-transformer-sharp": "^4.1.0",
     "netlify-plugin-cypress": "^2.2.0",
-    "node-fetch": "^2.6.6",
+    "node-fetch": "2.6.6",
     "postcss": "^8.3.11",
+    "postmark": "^2.7.8",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-animated-burgers": "^1.2.8",
