--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "testcafe": "start-test develop http://localhost:8000 testcafex",
     "testcafex": "percy exec -- testcafe chrome:headless testcafe/**/*",
     "cy:open": "cypress open",
-    "stylelint": "stylelint **/*.css --fix"
+    "stylelint": "stylelint **/*.css --fix",
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm i"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
