--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,8 @@ typings/
 *.tgz
 
 # dotenv environment variable files
-.env*
+.env
+.env.development
 
 # gatsby files
 .cache/
@@ -69,7 +70,6 @@ yarn-error.log
 # Yarn Integrity file
 .yarn-integrity
 
+# Recorded test videos 
 *.mp4
-TEST.txt
-
 .yarn/*
