--- a/package.json
+++ b/package.json
@@ -22,37 +22,37 @@
     "bump": "npx npm-check-updates --target minor -u && npm i"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.0",
+    "@testing-library/jest-dom": "^5.16.1",
     "@types/cypress": "^1.1.3",
-    "babel-jest": "^27.4.2",
+    "babel-jest": "^27.4.5",
     "babel-plugin-styled-components": "^2.0.2",
     "dotenv": "^10.0.0",
     "emailjs-com": "^3.2.0",
     "gatsby": "^4.3.0",
-    "gatsby-plugin-image": "^2.3.0",
-    "gatsby-plugin-manifest": "^4.3.0",
-    "gatsby-plugin-netlify": "^3.14.0",
-    "gatsby-plugin-postcss": "^5.3.0",
-    "gatsby-plugin-react-helmet": "^5.3.0",
+    "gatsby-plugin-image": "^2.4.0",
+    "gatsby-plugin-manifest": "^4.4.0",
+    "gatsby-plugin-postcss": "^5.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-robots-txt": "^1.6.14",
-    "gatsby-plugin-sharp": "^4.3.0",
-    "gatsby-plugin-sitemap": "^5.3.0",
-    "gatsby-plugin-styled-components": "^5.3.0",
-    "gatsby-source-filesystem": "^4.3.0",
-    "gatsby-transformer-sharp": "^4.3.0",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-plugin-sitemap": "^5.4.0",
+    "gatsby-plugin-styled-components": "^5.4.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-sharp": "^4.4.0",
     "netlify-plugin-cypress": "^2.2.0",
     "node-fetch": "2.6.6",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.5",
     "postmark": "^2.7.8",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-animated-burgers": "^1.2.8",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "react-reveal-effects": "^1.0.12",
     "react-spring": "^9.3.2",
     "styled-components": "^5.3.3",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.0.6",
     "testcafe": "^1.17.1",
     "testcafe-react-selectors": "^4.1.5"
   },
@@ -64,9 +64,9 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^2.3.0",
+    "babel-preset-gatsby": "^2.4.0",
     "cypress": "^9.1.1",
-    "eslint": "^8.4.0",
+    "eslint": "^8.4.1",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -74,8 +74,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "gatsby-cypress": "^2.3.0",
-    "jest": "^27.4.3",
+    "gatsby-cypress": "^2.4.0",
+    "jest": "^27.4.5",
     "prettier": "^2.5.1",
     "react-test-renderer": "^17.0.2",
     "start-server-and-test": "^1.14.0",
