--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-reveal-effects": "^1.0.12",
+    "react-simple-captcha": "^8.2.0",
     "react-spring": "^9.3.2",
     "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.6",
