--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "1.0.23",
+  "version": "1.0.24",
   "license": "MIT",
   "scripts": {
     "build": "gatsby clean && gatsby build",
@@ -21,15 +21,14 @@
     "refresh": "rm -rf node_modules && rm package-lock.json && npm i",
     "bump": "npx npm-check-updates --target minor -u && npm i",
     "lint": "eslint --fix --ext .js,.jsx ."
-    
   },
   "dependencies": {
+    "@emailjs/browser": "^3.3.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@types/cypress": "^1.1.3",
     "babel-jest": "^27.4.6",
     "babel-plugin-styled-components": "^2.0.2",
-    "dotenv": "^10.0.0",
-    "emailjs-com": "^3.2.0",
+    "dotenv": "^10.0.0",  
     "gatsby": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
@@ -75,7 +74,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0", 
+    "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
     "react-test-renderer": "^17.0.2",
