--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/cypress": "^1.1.3",
     "babel-jest": "^27.4.6",
     "babel-plugin-styled-components": "^2.0.2",
-    "dotenv": "^10.0.0",  
+    "dotenv": "^10.0.0",
     "gatsby": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
@@ -66,6 +66,7 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^2.4.0",
+    "classnames": "^2.3.1",
     "cypress": "^9.2.0",
     "eslint": "^8.6.0",
     "eslint-config-airbnb": "^19.0.4",
