--- a/netlify.toml
+++ b/netlify.toml
@@ -6,4 +6,4 @@
     X-Frame-Options = "SAMEORIGIN"
     X-XSS-Protection = "0"
     X-Content-Type-Options = "nosniff"
-    Content-Security-Policy: "default-src https:"
+    Content-Security-Policy= "default-src https:"
