--- a/netlify.toml
+++ b/netlify.toml
@@ -6,10 +6,5 @@
     X-Frame-Options = "SAMEORIGIN"
     X-XSS-Protection = "0"
     X-Content-Type-Options = "nosniff"
-    Content-Security-Policy = "script-src 'strict-dynamic' 'nonce-rAnd0m123' 'unsafe-inline' http: https:;
-object-src 'none';
-base-uri 'none';
-require-trusted-types-for 'script';
-report-uri https://csp.example.com;
-"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' fastly.net *.fastly.net lr-ingest.io *.lr-ingest.io cloudfront.net *.cloudfront.net googletagmanager.com *.googletagmanager.com; worker-src 'self' blob: data: lr-ingest.io *.lr-ingest.io; prefetch-src 'self'; connect-src 'self' r.lr-in.com lr-ingest.io *.lr-ingest.io google-analytics.com *.google-analytics.com; img-src 'self' *.fastly.net fastly.net data: cloudfront.net *.cloudfront.net cloudinary.com *.cloudinary.com; font-src 'unsafe-inline' gstatic.com *.gstatic.com cloudfront.net *.cloudfront.net; manifest-src 'self'; style-src 'unsafe-inline' googleapis.com *.googleapis.com cloudfront.net *.cloudfront.net; frame-ancestors 'self'; form-action 'self'; script-src-elem 'self' 'unsafe-inline' cdn.lr-in.com lr-ingest.io r.lr-in.com *.lr-ingest.io cloudfront.net *.cloudfront.net googletagmanager.com *.googletagmanager.com"
     # Content-Security-Policy= "default-src * 'self' https://www.dfweb.no/ *.sanity.io"
