--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "1.0.25",
+  "version": "1.0.26",
   "license": "MIT",
   "scripts": {
     "build": "gatsby clean && gatsby build",
@@ -18,7 +18,7 @@
     "testcafex": "percy exec -- testcafe chrome:headless testcafe/**/*",
     "cy:open": "cypress open",
     "stylelint": "stylelint **/*.css --fix",
-    "refresh": "rm -rf node_modules && rm package-lock.json && npm i",
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm i --legacy-peer-deps",
     "bump": "npx npm-check-updates --target minor -u && npm i",
     "lint": "eslint --fix --ext .js,.jsx ."
   },
