--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@5.0.0
-  browser-tools: circleci/browser-tools@1.2.3
+  #browser-tools: circleci/browser-tools@1.2.3
 jobs:
   build:
     working_directory: ~/dfweb
@@ -9,7 +9,7 @@ jobs:
       - image: circleci/node:latest
     steps:
       - checkout
-      - browser-tools/install-browser-tools
+      #- browser-tools/install-browser-tools
       - node/install-packages
       - restore_cache:
           key: yarn-packages-{{ checksum "package-lock.json" }}
