--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "gatsby-transformer-sharp": "^4.13.0",
     "netlify-plugin-cypress": "^2.2.0",
     "node-fetch": "2.6.7",
-    "postcss": "^8.4.13",  
+    "postcss": "^8.4.13",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -76,6 +76,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "prettier": "^2.6.2",
     "react-test-renderer": "^17.0.2",
     "start-server-and-test": "^1.14.0",
