--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@percy/testcafe": "^1.0.2",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/dom": "^8.13.0",
-    "@testing-library/react": "^13.2.0",
+    "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "^14.1.1",
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^2.13.0",
